# gosselin-platform-iceoryx2

./: .gitmodules  .harper-dictionary.txt  README.md  dimension-capstone-revised.toml  gp_kin_pose.py  gp_kin_twist.py  gp_kin_twist_mujoco_sim.py  initial-position.toml  pixi.toml  zenoh-client-config.json
gamepad-twist-publisher/: Cargo.toml
gamepad-twist-publisher/.cargo/: config.toml
gamepad-twist-publisher/src/: main.rs
keyboard-twist-publisher/: Cargo.toml
keyboard-twist-publisher/src/: main.rs
oak-camera/: iox2-visualize.py  oak-rgbd.py  oak_camera_const.py  oak_rgbd_publisher.py
oak-camera-cpp/: CMakeLists.txt
oak-camera-cpp/src/: main.cpp
orca-motor-server/: Cargo.toml  orca-serial-config.toml
orca-motor-server/src/: iox2_message_types.rs  main.rs  serial_config.rs
