[package]
    edition = "2024"
    name    = "orca-motor-server"
    version = "0.1.0"

[dependencies]
    anyhow               = "1.0.100"
    embedded-io-adapters = { version = "^0.7.0", features = ["tokio-1"] }
    futures              = "0.3.31"
    iceoryx2             = "0.7.0"
    orca-rs              = { git = "https://github.com/EzekielDaun/orca-rs.git" }
    serde                = { version = "^1", features = ["derive"] }
    tokio                = { version = "^1.48.0", features = ["full"] }
    tokio-serial         = "^5"
    toml                 = "^0.9"
